updated environment, title format

--- a/random-forest.ipynb
+++ b/random-forest.ipynb
@@ -4,16 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---\n",
-    "title: \"Random Forests\"\n",
-    "navtitle: \"Random Forest (NB)\"\n",
-    "subtitle: \"Deep Dive: Decision Trees & Random Forests\"\n",
-    "description: \"In-depth exploration of hot decision tree and random forest models work.\"\n",
-    "format:\n",
-    "  html:\n",
-    "    page-layout: full\n",
-    "    title-block-banner: true\n",
-    "---"
+    "# Random Forests"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## In-depth exploration of hot decision tree and random forest models work"
    ]
   },
   {
@@ -1114,7 +1112,7 @@
     {
      "data": {
       "text/plain": [
-       "1.0"
+       "np.float64(1.0)"
       ]
      },
      "execution_count": 21,
